Updated pieces of code after testing and added comments